--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "hotelmanagementsystem",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
