--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000/",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "check-password-strength": "^2.0.7",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
@@ -12,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
