--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
