--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "hotelmanagementsystem",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/",
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "@cloudinary/react": "^1.7.0",
+    "@cloudinary/url-gen": "^1.8.7",
+    "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "check-password-strength": "^2.0.7",
+    "cloudinary": "^1.33.0",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "validator": "^13.7.0"
   },
   "scripts": {
