--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@cloudinary/url-gen": "^1.8.7",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "check-password-strength": "^2.0.7",
     "cloudinary": "^1.33.0",
     "cookie-parser": "^1.4.6",
@@ -20,6 +21,7 @@
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
